[gd_scene load_steps=9 format=3 uid="uid://2v8j1uilmx84"]

[ext_resource type="Texture2D" uid="uid://do4oi56jjwtee" path="res://Pixel Adventure 1/Free/Background/Purple.png" id="1_80rny"]
[ext_resource type="Script" path="res://Levels/Main Menu.gd" id="1_heswe"]
[ext_resource type="Shader" path="res://BG Shaders/Main Menu-scroll-bg.gdshader" id="1_l8hgb"]
[ext_resource type="Texture2D" uid="uid://byxke8x87ukal" path="res://djumo.png" id="4_p3iyl"]
[ext_resource type="Texture2D" uid="uid://cdswbyaiogfym" path="res://Pixel Adventure 1/Free/Menu/Buttons/Play.png" id="5_7ht28"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cog4s"]
shader = ExtResource("1_l8hgb")
shader_parameter/speed = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyfrp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3wct"]

[node name="StartMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_heswe")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_cog4s")
layout_mode = 2
texture = ExtResource("1_80rny")
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_p3iyl")
expand_mode = 5

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_eyfrp")
text = "Start"
icon = ExtResource("5_7ht28")

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_r3wct")
button_mask = 3
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
